--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
+    "target": "es2017",
+    "module": "esnext",
     "baseUrl": ".",
     "resolveJsonModule": true,
     "strictNullChecks": true,
