--- a/.github/workflows/prayertimes.yml
+++ b/.github/workflows/prayertimes.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
       - name: Sync prayertimes
-        run: node ./downloadPrayerTime.js
+        run: node ../../src/downloadPrayerTime.js
       - name: Commit to repository
         env:
           GH_PAGES_ACCESS_TOKEN: ${{ secrets.GH_PAGES_ACCESS_TOKEN }}
