fix workflow path v6

--- a/.github/workflows/prayertimes.yml
+++ b/.github/workflows/prayertimes.yml
@@ -15,7 +15,7 @@ on:
       - prayertimes_webhook
 
 jobs:
-  webmentions-sync:
+  prayertimes-sync:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
