--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@astrojs/mdx": "^3.1.0",
     "@astrojs/sitemap": "^3.1.5",
     "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.10.1",
+    "astro": "^4.10.2",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
     "daisyui": "^4.12.2",
-    "prettier": "^3.3.1",
-    "prettier-plugin-astro": "^0.14.0"
+    "prettier": "^3.3.2",
+    "prettier-plugin-astro": "^0.14.0",
+    "sass": "^1.77.5"
   }
 }
