--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "square-sphere",
+  "name": "adhanapp",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -11,13 +11,21 @@
     "fmt": "./node_modules/prettier/bin/prettier.cjs --write ."
   },
   "dependencies": {
-    "@astrojs/check": "^0.8.2",
+    "@astrojs/check": "^0.9.2",
     "@astrojs/mdx": "^3.1.3",
+    "@astrojs/react": "^3.6.1",
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.12.2",
-    "tailwindcss": "^3.4.6",
-    "typescript": "^5.5.3"
+    "@nanostores/persistent": "^0.10.2",
+    "@nanostores/react": "^0.7.3",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "astro": "^4.13.2",
+    "nanostores": "^0.11.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.9",
+    "typescript": "^5.5.4"
   },
   "devDependencies": {
     "daisyui": "^4.12.10",
