--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "@astrojs/tailwind": "^5.1.0",
     "@nanostores/persistent": "^0.10.2",
     "@nanostores/react": "^0.7.3",
-    "@types/react": "^18.3.4",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "astro": "^4.14.6",
+    "astro": "^4.15.1",
+    "astro-robots-txt": "^1.0.0",
+    "astro-webmanifest": "^1.0.0",
     "nanostores": "^0.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "sharp": "^0.33.5",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
   },
